# fenics-dolfinx

./: .gitignore  AGENTS.md  sp.py
.github/workflows/: build-wheels.yml  ccpp.yml  ci-spack.yml  ci.yml  conda.yml  debian.yml  docker-dev-test-env.yml  docker-end-user.yml  docker-update-stable.yml  macos.yml  oneapi.yml  pyvista.yml  redhat.yml  sonarcloud.yml  spack.yml  valgrind.yml  windows.yml
cpp/: CMakeLists.txt
cpp/benchmark/: CMakeLists.txt  sort.cpp
cpp/cmake/modules/: DolfinxDeveloperCompilerFlags.cmake  FindKaHIP.cmake  FindParMETIS.cmake  FindUFCx.cmake
cpp/cmake/post-install/: CMakeLists.txt
cpp/cmake/scripts/: generate-cmakefiles.py
cpp/cmake/templates/: DOLFINXConfig.cmake.in
cpp/demo/biharmonic/: CMakeLists.txt
cpp/demo/codim_0_assembly/: CMakeLists.txt
cpp/demo/custom_kernel/: CMakeLists.txt  main.cpp
cpp/demo/geometric-multigrid/: main.cpp
cpp/demo/hyperelasticity/: CMakeLists.txt
cpp/demo/interpolation-io/: CMakeLists.txt
cpp/demo/interpolation_different_meshes/: CMakeLists.txt
cpp/demo/mixed_poisson/: CMakeLists.txt  main.cpp
cpp/demo/mixed_topology/: main.cpp
cpp/demo/poisson/: CMakeLists.txt
cpp/demo/poisson_matrix_free/: CMakeLists.txt
cpp/doc/source/: graph.rst
cpp/dolfinx/: CMakeLists.txt
cpp/dolfinx/common/: CMakeLists.txt  IndexMap.cpp  IndexMap.h  MPI.h  Scatterer.h  Table.cpp  Table.h  TimeLogger.cpp  TimeLogger.h  local_range.h  math.h  sort.h  timing.cpp  timing.h  types.h  utils.h
cpp/dolfinx/fem/: CMakeLists.txt  DirichletBC.cpp  DirichletBC.h  DofMap.cpp  Expression.h  FiniteElement.cpp  FiniteElement.h  Form.h  Function.h  assemble_matrix_impl.h  assemble_scalar_impl.h  assemble_vector_impl.h  assembler.h  dofmapbuilder.cpp  interpolate.h  pack.h  petsc.h  traits.h  utils.h
cpp/dolfinx/geometry/: BoundingBoxTree.h  CMakeLists.txt  gjk.h  utils.h
cpp/dolfinx/graph/: AdjacencyList.h  CMakeLists.txt  ordering.cpp  ordering.h  partition.cpp  partitioners.cpp  utils.cpp  utils.h
cpp/dolfinx/io/: CMakeLists.txt  HDF5Interface.cpp  HDF5Interface.h  VTKFile.cpp  VTKFile.h  VTKHDF.h  XDMFFile.cpp  XDMFFile.h  cells.cpp  vtk_utils.h  xdmf_mesh.cpp  xdmf_mesh.h  xdmf_utils.cpp  xdmf_utils.h
cpp/dolfinx/la/: CMakeLists.txt  MatrixCSR.h  SparsityPattern.h  Vector.h  matrix_csr_impl.h  petsc.cpp  petsc.h  slepc.cpp  slepc.h  superlu_dist.cpp  superlu_dist.h
cpp/dolfinx/mesh/: CMakeLists.txt  EntityMap.h  Mesh.h  MeshTags.h  Topology.cpp  Topology.h  cell_types.cpp  cell_types.h  generation.h  graphbuild.cpp  graphbuild.h  permutationcomputation.cpp  permutationcomputation.h  topologycomputation.cpp  topologycomputation.h  utils.cpp  utils.h
cpp/dolfinx/nls/: CMakeLists.txt
cpp/dolfinx/refinement/: CMakeLists.txt  interval.h  mark.h  plaza.h  refine.h  uniform.cpp
cpp/dolfinx/transfer/: transfer_matrix.h
cpp/test/: CMakeLists.txt  graph.cpp
cpp/test/common/: index_map.cpp
cpp/test/mesh/: branching_manifold.cpp  distributed_mesh.cpp  generation.cpp  interval.cpp  rectangle.cpp  util.h
cpp/test/mesh/refinement/: interval.cpp  rectangle.cpp
cpp/test/refinement/: interval.cpp  rectangle.cpp
cpp/test/transfer/: transfer_matrix.cpp
docker/: Dockerfile.redhat  Dockerfile.test-env
python/: CMakeLists.txt  conda-oneapi-test-env.yml  pyproject.toml
python/demo/: 1d_petsc_multigrid.py  1d_transer.py  1d_transfer.py  2d_transfer.py  demo_axis.py  demo_biharmonic.py  demo_elasticity.py  demo_gmsh.py  demo_hdg.py  demo_interpolation-io.py  demo_lagrange-variants.py  demo_matrix-free-petsc.py  demo_mixed-topology.py  demo_navier-stokes.py  demo_pml.py  demo_poisson_adaptive.py  demo_pyvista.py  demo_twogrid.py
python/doc/source/: release_notes.md
python/dolfinx/: geometry.py  mesh.py  pkgconfig.py  plot.py  utils.py
python/dolfinx/fem/: assemble.py  bcs.py  element.py  forms.py  function.py  petsc.py
python/dolfinx/io/: gmsh.py  gmshio.py  utils.py
python/dolfinx/la/: petsc.py
python/dolfinx/wrappers/: common.cpp  fem.cpp  graph.cpp  io.cpp  mesh.cpp  petsc.cpp  refinement.cpp
python/dolfinx/wrappers/dolfinx_wrappers/: MPICommWrapper.h  array.h  caster_mpi.h  caster_petsc.h  common.h  fem.h  geometry.h  graph.h  la.h  mesh.h  petsc.h  refinement.h
python/test/unit/: conftest.py
python/test/unit/common/: test_index_map.py
python/test/unit/fem/: test_assembler.py  test_dof_permuting.py  test_dofmap.py  test_element_integrals.py  test_expression.py  test_interpolate_geometry.py  test_interpolation.py  test_petsc_nonlinear_assembler.py  test_quadrature_elements.py
python/test/unit/geometry/: test_bounding_box_tree.py
python/test/unit/io/: test_vtkhdf.py
python/test/unit/mesh/: test_create_mixed_mesh.py  test_dual_graph.py  test_higher_order_mesh.py  test_mixed_topology.py
python/test/unit/refinement/: interval.py  test_refinement.py
